# ad-game-datapipeline

./: .gitignore  CLAUDE.md  README.md  requirements.txt
docs/: ANNOTATION_WORKFLOW.md  DATA_PIPELINE.md  GETTING_STARTED.md  NFL_PROJECT_PLAN.md  PROJECT_STATUS.md  TRAINING_APPROACH.md
docs/Technical_Info/: implementation_gameplan.md  method_explanation.md  model_and_training.md
pipeline/: README.md
pipeline/01-fubo-scraper/: .env.example  .gitignore  README.md  config.py  main.py  requirements.txt  scraper.py
pipeline/02-download-games/: .gitignore  README.md  download-streams.js  master.csv.example  package.json
pipeline/03-process-videos/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  createAnnotationJson.py  downloadScript.txt  master_map.csv  process_videos.py  pyproject.toml  update_manifests.py
pipeline/03-process-videos/.cursor/rules/: planning.mdc
scripts/: 01_scrape_fubo.sh  02_download_games.sh  03_process_videos.sh  04_create_annotations.sh  README.md  check_prerequisites.sh  generate_pipeline_report.sh  run_pipeline.sh
